# django-enum

./: pyproject.toml
enum_django/: manage.py
enum_django/app/: models.py  urls.py  utils.py  views.py
enum_django/app/migrations/: 0001_initial.py  0002_alter_student_year.py  0003_alter_student_year_alter_subjectclass_subject.py  0004_remove_subjectclass_student_subjectclass_students.py
enum_django/app/templates/: base.html
enum_django/app/templates/app/: index.html
enum_django/enum_django/: asgi.py  settings.py  urls.py  wsgi.py
enum_django/templates/: base.html
