[tool.poetry]
name = "enum-django"
version = "0.1.0"
description = "This project is for a blog to describe how Enum works in Django very harmonously."
authors = ["Soumya Nasipuri <nasipurisoumya@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^5.1.3"
djangorestframework = "^3.15.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
package-mode = false
